--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,8 @@ body{
 
 .logo{
     color: var(--accent-color);
-    width: 145px;
-    height: 31px;
-
+   
+    font-size: 26px;
     text-decoration: none;
     font-family: Raleway, sans-serif; 
     line-height: 1.2;
@@ -111,7 +110,10 @@ body{
 
     font-size: 14px;
     line-height: 1.7;
+    
 }
+
+c
 
 /* Чим займаємося */
 
