--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 } 
 
 body{
-    background-color: F5F5F5;
+    background-color: #F5F5F5;
     color: var(--basic-color);
 
     font-family: Roboto, sans-serif;
@@ -113,7 +113,6 @@ body{
     
 }
 
-c
 
 /* Чим займаємося */
 
