--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
     background-color: #F5F5F5;
     color: var(--basic-color);
 
-    font-family: Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
 }
 
@@ -24,7 +24,7 @@ body{
    
     font-size: 26px;
     text-decoration: none;
-    font-family: Raleway, sans-serif; 
+    font-family: 'Raleway', sans-serif; 
     line-height: 1.2;
 
 }
